--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
             <p class="lead mb-5"> Bachelor in Software Engineer by the Faculty of Computing at the Federal University of
                 Mato Grosso do Sul (UFMS).</p>
             <!--                    <a href="https://dblp.org/pers/f/Font=atilde=o:Awdren_de_Lima.html">DBLP | </a>-->
-            <a href="https://scholar.google.com.br/citations?user=gvIsuicAAAAJ&hl=en">Google Scholar | </a>
+            <a href="https://scholar.google.com.br/citations?user=gvIsuicAAAAJ&hl=en">Google Scholar </a>|
             <!--                    <a href="https://www.researchgate.net/profile/Awdren_Fontao">Research Gate | </a>-->
-            <a href="http://lattes.cnpq.br/7656889487642468">CV Lattes</a>
+            <a href="http://lattes.cnpq.br/7656889487642468"> CV Lattes</a>
             <div class="social-icons">
                 <a class="social-icon" href="https://www.linkedin.com/in/gabrielsantanamenezes/"><i
                         class="fab fa-linkedin-in"></i></a>
@@ -69,130 +69,38 @@
     <section class="resume-section" id="experience">
         <div class="resume-section-content">
             <h2 class="mb-5">Publications</h2>
-            <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                <div class="flex-grow-1">
-                    <h3 class="mb-0">Refereed Journal Papers</h3>
-                    <div class="subheading mb-3">2020</div>
-                    <p>FONTÃO, A. L. ; PAES, P. ; SANTOS, R. P. ; EKWOGE, OSWALD M. ; DIAS NETO, A. C. . Evaluating
-                        Processes to Certify Mobile Applications during Developer Relations Activities. IEEE Access, v.
-                        8, p. 1-15.</p>
-                    <div class="subheading mb-3">2019</div>
-                    <p>FONTÃO, A. L.; SANTOS, R. P. ; DIAS-NETO, ARILO CLAUDIO . Exploiting Repositories in Mobile
-                        Software Ecosystems from a Governance Perspective. INFORMATION SYSTEMS FRONTIERS, v. 2019, p.
-                        143-161.</p>
-                    <div class="subheading mb-3">2018</div>
-                    <p>FONTÃO, AWDREN; ÁBIA, BRUNO ; WIESE, IGOR ; ESTÁCIO, BERNARDO ; QUINTA, MARCELO ; SANTOS, RODRIGO
-                        PEREIRA DOS ; DIAS-NETO, ARILO CLAUDIO . Supporting governance of mobile application developers
-                        from mining and analyzing technical questions in stack overflow. JOURNAL OF SOFTWARE ENGINEERING
-                        RESEARCH AND DEVELOPMENT, v. 6, p. 8.</p>
-                </div>
-            </div>
+            <!--            <div class="d-flex flex-column flex-md-row justify-content-between mb-5">-->
+            <!--                <div class="flex-grow-1">-->
+            <!--                    <h3 class="mb-0">Refereed Journal Papers</h3>-->
+            <!--                    <div class="subheading mb-3">2020</div>-->
+            <!--                    <p>FONTÃO, A. L. ; PAES, P. ; SANTOS, R. P. ; EKWOGE, OSWALD M. ; DIAS NETO, A. C. . Evaluating-->
+            <!--                        Processes to Certify Mobile Applications during Developer Relations Activities. IEEE Access, v.-->
+            <!--                        8, p. 1-15.</p>-->
+            <!--                    <div class="subheading mb-3">2019</div>-->
+            <!--                    <p>FONTÃO, A. L.; SANTOS, R. P. ; DIAS-NETO, ARILO CLAUDIO . Exploiting Repositories in Mobile-->
+            <!--                        Software Ecosystems from a Governance Perspective. INFORMATION SYSTEMS FRONTIERS, v. 2019, p.-->
+            <!--                        143-161.</p>-->
+            <!--                    <div class="subheading mb-3">2018</div>-->
+            <!--                    <p>FONTÃO, AWDREN; ÁBIA, BRUNO ; WIESE, IGOR ; ESTÁCIO, BERNARDO ; QUINTA, MARCELO ; SANTOS, RODRIGO-->
+            <!--                        PEREIRA DOS ; DIAS-NETO, ARILO CLAUDIO . Supporting governance of mobile application developers-->
+            <!--                        from mining and analyzing technical questions in stack overflow. JOURNAL OF SOFTWARE ENGINEERING-->
+            <!--                        RESEARCH AND DEVELOPMENT, v. 6, p. 8.</p>-->
+            <!--                </div>-->
+            <!--            </div>-->
             <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                 <div class="flex-grow-1">
                     <h3 class="mb-0">Refereed Conference/Workshop Papers</h3>
                     <div class="subheading mb-3">2020</div>
-                    <p>COSTA, L. A. ; FONTÃO, AWDREN ; SANTOS, R. P. . Investigating Asset Governance Mechanisms in a
-                        Proprietary Software Ecosystem. In: XVI Brazilian Symposium on Information Systems - SBSI'20,
-                        2020, São Bernando do Campo. Proceedings of the XVI Brazilian Symposium on Information Systems -
-                        SBSI'20</p>
-                    <p>FONTÃO, AWDREN; CLEGER-TAMAYO, S. ; WIESE, IGOR ; DOS SANTOS, RODRIGO PEREIRA ; DIAS-NETO, ARILO
-                        CLAUDIO . On Value Creation in Developer Relations (DevRel): a practitioners? perspective. In:
-                        International Conference on Global Software Engineering, 2020, Seoul. 15th ACM/IEEE
-                        International Conference on Global Software Engineering - ICGSE</p>
-                    <p>FONTÃO, AWDREN; CAFEO, B. B. P. ; BONIFACIO, B. ; DOS SANTOS, RODRIGO PEREIRA ; Dias-Neto, Arilo
-                        . On Developer Relations Team?s Reasons for Using Repositories. In: Workshop on Cooperative and
-                        Human Aspects of Software Engineering (CHASE), 2020, SEOUL. Proceedings of the 13th
-                        International Workshop on Cooperative and Human Aspects of Software Engineering</p>
-                    <p>COSTA, L. A. M. ; FONTÃO, AWDREN ; DOS SANTOS, RODRIGO PEREIRA . Uma Abordagem para Gestão de
-                        Incidentes em Ecossistemas de Software Proprietário.. In: XVI Simpósio Brasileiro de Sistemas de
-                        Informação, 2020, São Bernado do Campo. Anais Estendidos do Simpósio Brasileiro de Sistemas de
-                        Informação (SBSI), WTDSI</p>
-                    <p>MORAIS, F. L. ; FONTÃO, AWDREN ; CLEGER-TAMAYO, S. . Combining Design Thinking and Scrum to
-                        enhance Test Suite during innovative software development. In: Ibero-American Conference on
-                        Software Engineering (CIbSE), 2020, Curitiba. Proceeding of the XXXIII Ibero-American Conference
-                        on Software Engineering</p>
+                    <p>Braga, Willian & Menezes, Gabriel & Fontão, Awdren & Hora, Andre & Cafeo, Bruno. (2020). Quero
+                        lhe
+                        usar! Uma análise do público-alvo de code samples. In: Congresso Brasileiro de Software: Teoria
+                        e Prática (CBSoft), 2020. Proceeding of the 8th Workshop on Software Visualization, Evolution
+                        and Maintenance (VEM)</p>
                     <div class="subheading mb-3">2019</div>
-                    <p>FONTÃO, AWDREN; GADELHA, B. ; CASTRO JUNIOR, A. . Balancing theory and practice in software
-                        engineering education - A PBL, toolset based approach. In: Frontiers in Education, 2019,
-                        Cincinnati. 49th Annual Frontiers in Education (FIE) Conference</p>
-                    <p>LIMA, M. ; FONTÃO, AWDREN ; FERNANDES, D. ; CONTE, T. ; GADELHA, B. . How are my Students going?
-                        A Tool to Analyse Students? Interactions on Capstone Courses. In: Brazilian Symposium on
-                        Informatics in Education (SBIE), 2019, Brasília. Proceedings of the XXX Brazilian Symposium on
-                        Informatics in Education</p>
-                    <div class="subheading mb-3">2018</div>
-                    <p>FONTÃO, A; ESTACIO, B. ; FERNANDES, J. ; SANTOS, R. P. ; DIAS-NETO, ARILO CLAUDIO . Which factors
-                        affect the evangelist's support during training sessions in Mobile Software Ecosystems?. In:
-                        12th European Conference on Software Architecture - Workshops, 2018, Madrid. 12th European
-                        Conference on Software Architecture: Companion Proceedings</p>
-                    <p>FONTÃO, AWDREN; BONIFACIO, B. ; SANTOS, RODRIGO PEREIRA DOS ; DIAS-NETO, ARILO CLAUDIO . Mobile
-                        Application Development Training in Mobile Software Ecosystem: Investigating the Developer
-                        eXperience. In: Brazilian Symposium on Software Quality (SBQS 2018), 2018, Curitiba. Proceedings
-                        of the 17th Brazilian Symposium on Software Quality</p>
-                    <div class="subheading mb-3">2017</div>
-                    <p>FONTÃO, A. L.; Dias-Neto, Arilo ; VIANA, D. . Investigating factors that influence developers
-                        experience in mobile software ecosystems. In: ICSE Joint 5th International Workshop on Software
-                        Engineering for Systems-of-systems and 11th Workshop on Distributed Software Development,
-                        Software Ecosystems and Systems-of-Systems, 2017, Buenos Aires. Proceedings of the ICSE Joint
-                        5th International Workshop on Software Engineering for Systems-of-systems and 11th Workshop on
-                        Distributed Software Development, Software Ecosystems and Systems-of-Systems</p>
-                    <p>EKWOGE, O. ; FONTAO, AWDREN DE LIMA ; Dias-Neto, Arilo . Tester Experience: Concept, Issues and
-                        Definition. In: COMPSAC 2017 - The 41th Annual International Computers, Software & Applications
-                        Conference, 2017, Turin. Proceedings of the COMPSAC</p>
-                    <p>ASCATE, S. ; MENDES, I. ; OLIVEIRA, K. ; FONTAO, AWDREN DE LIMA ; ROJAS, I. ; Dias-Neto, Arilo .
-                        Challenges in Model Based Testing for Mobile Applications. In: CIbSE 2017, 2017, Buenos Aires.
-                        XX Ibero-American Conference on Software Engineering</p>
-                    <p>FONTÃO, AWDREN; EKWOGE, O. ; Santos, Rodrigo ; Dias-Neto, Arilo . Facing up the primary emotions
-                        in Mobile Software Ecosystems from Developer Experience. In: Workshop on Social, Human, and
-                        Economic Aspects of Software (WASHES) at the 16th International Conference on Software Reuse,
-                        2017, Salvador. 2nd Workshop on Social, Human, and Economic Aspects of Software</p>
-                    <p>FONTÃO, A. L.; LIMA, F. ; ABIA, B. ; SANTOS, RODRIGO PEREIRA DOS ; Dias-Neto, Arilo . Hearing the
-                        Voice of Developers in Mobile Software Ecosystems. In: Brazilian Symposium on Software
-                        Engineering (SBES)</p>
-                    <p>FONTÃO, A. L.; DOS SANTOS, RODRIGO PEREIRA ; DIAS-NETO, ARILO CLAUDIO . MSECO-CERT: Uma Abordagem
-                        Baseada em Processo para Apoiar a Certificação de Apps em Ecossistema de Software Móvel. In: XVI
-                        SBQS - XVI Simpósio Brasileiro de Qualidade de Software, 2017, Rio de Janeiro. Anais do XVI
-                        SBQS</p>
-                    <p>FONTÃO, A. L.; SANTOS, R. P. ; DIAS-NETO, ARILO CLAUDIO . Towards a Guideline-Based Approach to
-                        Govern Developers in Mobile Software Ecosystems. In: ICSR 2017 - 16th International Conference
-                        on Software Reuse</p>
-                    <div class="subheading mb-3">2016</div>
-                    <p>BEZERRA, A. ; FONTAO, AWDREN DE LIMA ; Dias-Neto, Arilo . Simulação de Ecossistemas de Software
-                        Móvel: Estado da Arte, Desafios e Oportunidades. In: 13th Empirical Software Engineering Latin
-                        American Workshop (ESELAW 2016)</p>
-                    <p>FONTAO, AWDREN DE LIMA; SANTOS, RODRIGO PEREIRA DOS ; FEIJO, J. ; NETO, ARILO CLAUDIO DIAS .
-                        MSECO-DEV: Application Development Process in Mobile Software Ecosystems. In: The 28th
-                        International Conference on Software Engineering & Knowledge Engineering, 2016, San Francisco
-                        Bay. The Twenty-Eighth International Conference on Software Engineering and Knowledge
-                        Engineering (SEKE 2016)</p>
-                    <p>LOBO, L. ; FONTÃO, AWDREN ; BEZERRA, A. ; Dias-Neto, Arilo . An Empirical Analysis of Mobile Apps
-                        Popularity Metrics in Mobile Software Ecosystems. In: Brazilian Symposium on Software Quality,
-                        2016, Maceió. Proceedings of the 15th Brazilian Symposium on Software Quality</p>
-                    <p>PEDRACA, B. ; FERNANDES, P. ; BONIFACIO, B. ; FONTÃO, AWDREN ; Dias-Neto, Arilo . Explorando a
-                        Personalidade do Desenvolvedor em Ecossistemas de Software Móvel. In: Workshop sobre Aspectos
-                        Sociais, Humanos e Econômicos de Software (WASHES)</p>
-                    <p>PEDRACA, B. ; BONIFACIO, B. ; FERNANDES, P. ; FONTÃO, AWDREN ; Dias-Neto, Arilo . O Ensino de
-                        Programação Mobile em Ecossistema Móvel. In: TISE - Conferência Internacional sobre Informática
-                        na Educação</p>
-                    <div class="subheading mb-3">2015</div>
-                    <p>FONTÃO, A. L.; Santos, Rodrigo ; Dias-Neto, Arilo . Mobile Software Ecosystem (MSECO): A
-                        Systematic Mapping Study. In: COMPSAC 2015 - The 39th Annual International Computers, Software &
-                        Applications Conference</p>
-                    <p>REIS, R. A. C. ; FONTÃO, A. L. ; LOBO, L. ; Dias-Neto, Arilo . Usability Evaluation Approaches
-                        for (Ubiquitous) Mobile Applications: A Systematic Mapping Study. In: UBICOMM 2015: The Ninth
-                        International Conference on Mobile Ubiquitous Computing, Systems, Services and Technologies</p>
-                    <p>FONTÃO, A. L.; Dias-Neto, Arilo . MSECO Cert: Uma abordagem baseada em processo para apoiar a
-                        certificação de apps em Ecossistemas de Software Móvel. In: SBQS - Simpósio Brasileiro de
-                        Qualidade de Sotware, WTDQS - Workshop de Teses e Dissertações em Qualidade de Software</p>
-                    <p>FONTAO, AWDREN DE LIMA; SANTOS, RODRIGO PEREIRA DOS ; NETO, ARILO CLAUDIO DIAS . MSECO-SUP:
-                        Support Process in Mobile Software Ecosystems. In: 2015 29th Brazilian Symposium on Software
-                        Engineering (SBES)</p>
-                    <p>BIASE, C. ; FERNANDES, P. ; FONTÃO, A. L. ; FERNANDES, M. ; BONIFACIO, B. . Avaliando a
-                        Experiência de Desenvolvedores (DX) no Processo de Ensino de Desenvolvimento de Aplicações
-                        Móveis</p>
-                    <div class="subheading mb-3">2014</div>
-                    <p>FONTÃO, A. L.; BONIFACIO, B. ; Dias-Neto, Arilo ; BEZERRA, A. ; Santos, Rodrigo . MSECO Skill:
-                        Construção de Competências de Desenvolvedores em Ecossistemas de Software Móvel. In: CIbSE -
-                        Congreso Iberoamericano en Ingeniería de Software</p>
+                    <p>G. Menezes, B. Cafeo and A. Hora, "Framework Code Samples: How Are They Maintained and Used by
+                        Developers?," 2019 ACM/IEEE International Symposium on Empirical Software Engineering and
+                        Measurement (ESEM), Porto de Galinhas, Recife, Brazil, 2019, pp. 1-11, doi:
+                        10.1109/ESEM.2019.8870139.</p>
                 </div>
             </div>
 
