--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
     <meta name="description" content=""/>
     <meta name="author" content=""/>
-    <title>Awdren Fontão, PhD - FACOM/UFMS</title>
+    <title>Gabriel Menezes, Master Student - FACOM/UFMS</title>
     <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico"/>
     <!-- Font Awesome icons (free version)-->
     <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
@@ -45,7 +45,7 @@
         <div class="resume-section-content">
             <h1 class="mb-0">
                 Gabriel Menezes
-                <span class="text-primary">, PhD</span>
+                <span class="text-primary">, Master Student</span>
             </h1>
             <div class="subheading mb-5">
                 Student, Federal University of Mato Grosso do Sul (UFMS), Faculty of Computing (FACOM)
