Adicionando o ESEM nos awards

--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
                     <h3 class="mb-0">Refereed Conference/Workshop Papers</h3>
                     <div class="subheading mb-3">2020</div>
                     <p>Braga, Willian & Menezes, Gabriel & Fontão, Awdren & Hora, Andre & Cafeo, Bruno. (2020). Quero
-                        lhe
-                        usar! Uma análise do público-alvo de code samples. In: Congresso Brasileiro de Software: Teoria
+                        lhe usar! Uma análise do público-alvo de code samples. In: Congresso Brasileiro de Software:
+                        Teoria
                         e Prática (CBSoft), 2020. Proceeding of the 8th Workshop on Software Visualization, Evolution
                         and Maintenance (VEM)</p>
                     <div class="subheading mb-3">2019</div>
@@ -103,7 +103,6 @@
                         10.1109/ESEM.2019.8870139.</p>
                 </div>
             </div>
-
         </div>
     </section>
     <hr class="m-0"/>
@@ -261,56 +260,8 @@
             <ul class="fa-ul mb-0">
                 <li>
                     <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                    (2019) Tribute for the Defense of the 50th Doctoral Thesis of the PPGI of ICOMP/UFAM
-                </li>
-                <li>
-                    <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                    (2018) Recognition for productivity in the 2017-2018 biennium, Institute of Computing - Federal
-                    University of Amazonas
-                </li>
-                <li>
-                    <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                    (2017) 3
-                    <sup>rd</sup>
-                    Place - Best dissertations in computing in Brazil, Brazilian Computer Society.
-                </li>
-                <li>
-                    <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                    (2017) 2
-                    <sup>nd</sup>
-                    Place - Best dissertations in Software Quality in Brazil, Brazilian Symposium on Software Quality.
-                </li>
-                <li>
-                    <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                    (2017) Among the 5 best articles of "Research Track", Brazilian Symposium on Software Engineering.
-                </li>
-                <li>
-                    <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                    (2016) Best Paper Award (PHD, Poster Category): "GoDev-DX: Developers? Governance in Mobile Software
-                    Ecosystems from Developer Experience (DX)", The III Latin-American School on Software Engineering
-                    (ELA-ES)
-                </li>
-                <li>
-                    <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                    (2016) Best Paper Award: Explorando a Personalidade do Desenvolvedor em Ecossistemas de Software
-                    Móvel, I Workshop sobre Aspectos Sociais, Humanos e Econômicos de Software (WASHES)
-                </li>
-                <li>
-                    <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                    (2015) Best Paper Award: Avaliando a Experiência de Desenvolvedores (DX) no Processo de Ensino de
-                    Desenvolvimento de Aplicações Móveis, Conferência Ibero-Americana WWW/Internet
-                </li>
-                <li>
-                    <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                    (2013) Nokia Developer Certified Trainer
-                </li>
-                <li>
-                    <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                    (2012) Nokia Developer Champion, Nokia.
-                </li>
-                <li>
-                    <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                    (2011) Nokia Developer Champion, Nokia.
+                    (2019) Top 3 Best Papper in ACM/IEEE International Symposium on Empirical Software Engineering and
+                    Measurement (ESEM)
                 </li>
             </ul>
         </div>
