--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
             <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Publications</a></li>
             <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Research</a></li>
-            <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Students</a></li>
+<!--            <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Students</a></li>-->
             <!--<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Service</a></li>-->
             <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
         </ul>
@@ -157,92 +157,92 @@
     </section>
     <hr class="m-0"/>
     <!-- Skills-->
-    <section class="resume-section" id="skills">
-        <div class="resume-section-content">
-            <h2 class="mb-5">Students</h2>
-            <div class="subheading mb-3">My current students</div>
-            <ul class="fa-ul mb-0">
-                <li>
-                    <span class="fa-li"><i class="fas fa-check"></i></span>
-                    Luiz Alexandre Martins da Costa (MSc. @UNIRIO| co-supervisor) An Approach to Incident Management in
-                    Proprietary Software Ecosystems
-                </li>
-                <li>
-                    <span class="fa-li"><i class="fas fa-check"></i></span>
-                    Daniel Massanori (Undergrad @FACOM/UFMS) On Investigating the Death of Software Ecosystems - Windows
-                    Phone Scenario
-                </li>
-                <li>
-                    <span class="fa-li"><i class="fas fa-check"></i></span>
-                    Flavio Augusto (Undergrad @FACOM/UFMS) A strategy to support onboarding of novice software testers
-                </li>
-                <li>
-                    <span class="fa-li"><i class="fas fa-check"></i></span>
-                    Willian Braga (Undergrad @FACOM/UFMS) Code Samples as enablers for Developer Relations in Software
-                    Ecosystems
-                </li>
-                <li>
-                    <span class="fa-li"><i class="fas fa-check"></i></span>
-                    Jhonatan Froeder de Oliveira (Undergrad @FACOM/UFMS) Sistema acadêmico para os cursos de extensão da
-                    UFMS
-                </li>
-                <li>
-                    <span class="fa-li"><i class="fas fa-check"></i></span>
-                    Igor Braga Galvan (Undergrad @FACOM/UFMS) On applying Ecological Modeling in Software Ecosystem
-                    research
-                </li>
-                <li>
-                    <span class="fa-li"><i class="fas fa-check"></i></span>
-                    Felipe Soupinski (Undergrad @FACOM/UFMS) A Developer Relations (DevRel) perspective of Software
-                    Ecosystems' Death
-                </li>
-            </ul>
-            <div class="subheading mb-3">Alumni</div>
-            <ul class="fa-ul mb-0">
-                <li>
-                    <span class="fa-li"><i class="fas fa-check"></i></span>
-                    Oswald Mesumbe Ekwoge (MSc. @ICOMP/UFAM | co-supervisor | 2016-2018). Tester Experience: Uma
-                    Abordagem para Melhorar a Experiência do Testador em Projetos de Software.
-                </li>
-                <li>
-                    <span class="fa-li"><i class="fas fa-check"></i></span>
-                    Marcos Hiroshi Saito Bezerra (Undergrad @ICOMP/UFAM | 2018) Um estudo sobre as barreiras enfrentadas
-                    por testadores novatos de apps.
-                </li>
-                <li>
-                    <span class="fa-li"><i class="fas fa-check"></i></span>
-                    Kleyfferson Lima Silva (Undergrad @ICOMP/UFAM | 2018) Um estudo sobre a adoção do Scrum por equipes
-                    de projetos de larga escala
-                </li>
-                <li>
-                    <span class="fa-li"><i class="fas fa-check"></i></span>
-                    Gabriel Gama (Undergrad @ICOMP/UFAM | 2018).​Uma ferramenta para apoiar o uso do Scrum com equipes
-                    remotas
-                </li>
-                <li>
-                    <span class="fa-li"><i class="fas fa-check"></i></span>
-                    Fabrício José da Silva Lima (Undergrad @ICOMP/UFAM | co-supervisor | 2017). Entendendo MSECO a
-                    partir de Análise de Dados Técnicos do Stack Overflow
-                </li>
-                <li>
-                    <span class="fa-li"><i class="fas fa-check"></i></span>
-                    Schweitzer Wostewoysers Campelo (Undergrad @ICOMP/UFAM | co-supervisor | 2016). Analisando a Relação
-                    entre Relatos de Falhas e Ratings em Comentários de Aplicações Móveis na Loja Google Play
-                </li>
-                <li>
-                    <span class="fa-li"><i class="fas fa-check"></i></span>
-                    Ludymila Lobo Aguiar Gomes (Undergrad @ICOMP/UFAM | co-supervisor | 2015). Identificando nichos em
-                    Ecossistemas de Aplicativos Móveis
-                </li>
-                <li>
-                    <span class="fa-li"><i class="fas fa-check"></i></span>
-                    Caio Biase Grana (Undergrad @ICET/UFAM | co-supervisor | 2015). Realizando um estudo do método UX
-                    Curve aplicado a Experiência do Desenvolvedor.
-                </li>
-            </ul>
-        </div>
-    </section>
-    <hr class="m-0"/>
+<!--    <section class="resume-section" id="skills">-->
+<!--        <div class="resume-section-content">-->
+<!--            <h2 class="mb-5">Students</h2>-->
+<!--            <div class="subheading mb-3">My current students</div>-->
+<!--            <ul class="fa-ul mb-0">-->
+<!--                <li>-->
+<!--                    <span class="fa-li"><i class="fas fa-check"></i></span>-->
+<!--                    Luiz Alexandre Martins da Costa (MSc. @UNIRIO| co-supervisor) An Approach to Incident Management in-->
+<!--                    Proprietary Software Ecosystems-->
+<!--                </li>-->
+<!--                <li>-->
+<!--                    <span class="fa-li"><i class="fas fa-check"></i></span>-->
+<!--                    Daniel Massanori (Undergrad @FACOM/UFMS) On Investigating the Death of Software Ecosystems - Windows-->
+<!--                    Phone Scenario-->
+<!--                </li>-->
+<!--                <li>-->
+<!--                    <span class="fa-li"><i class="fas fa-check"></i></span>-->
+<!--                    Flavio Augusto (Undergrad @FACOM/UFMS) A strategy to support onboarding of novice software testers-->
+<!--                </li>-->
+<!--                <li>-->
+<!--                    <span class="fa-li"><i class="fas fa-check"></i></span>-->
+<!--                    Willian Braga (Undergrad @FACOM/UFMS) Code Samples as enablers for Developer Relations in Software-->
+<!--                    Ecosystems-->
+<!--                </li>-->
+<!--                <li>-->
+<!--                    <span class="fa-li"><i class="fas fa-check"></i></span>-->
+<!--                    Jhonatan Froeder de Oliveira (Undergrad @FACOM/UFMS) Sistema acadêmico para os cursos de extensão da-->
+<!--                    UFMS-->
+<!--                </li>-->
+<!--                <li>-->
+<!--                    <span class="fa-li"><i class="fas fa-check"></i></span>-->
+<!--                    Igor Braga Galvan (Undergrad @FACOM/UFMS) On applying Ecological Modeling in Software Ecosystem-->
+<!--                    research-->
+<!--                </li>-->
+<!--                <li>-->
+<!--                    <span class="fa-li"><i class="fas fa-check"></i></span>-->
+<!--                    Felipe Soupinski (Undergrad @FACOM/UFMS) A Developer Relations (DevRel) perspective of Software-->
+<!--                    Ecosystems' Death-->
+<!--                </li>-->
+<!--            </ul>-->
+<!--            <div class="subheading mb-3">Alumni</div>-->
+<!--            <ul class="fa-ul mb-0">-->
+<!--                <li>-->
+<!--                    <span class="fa-li"><i class="fas fa-check"></i></span>-->
+<!--                    Oswald Mesumbe Ekwoge (MSc. @ICOMP/UFAM | co-supervisor | 2016-2018). Tester Experience: Uma-->
+<!--                    Abordagem para Melhorar a Experiência do Testador em Projetos de Software.-->
+<!--                </li>-->
+<!--                <li>-->
+<!--                    <span class="fa-li"><i class="fas fa-check"></i></span>-->
+<!--                    Marcos Hiroshi Saito Bezerra (Undergrad @ICOMP/UFAM | 2018) Um estudo sobre as barreiras enfrentadas-->
+<!--                    por testadores novatos de apps.-->
+<!--                </li>-->
+<!--                <li>-->
+<!--                    <span class="fa-li"><i class="fas fa-check"></i></span>-->
+<!--                    Kleyfferson Lima Silva (Undergrad @ICOMP/UFAM | 2018) Um estudo sobre a adoção do Scrum por equipes-->
+<!--                    de projetos de larga escala-->
+<!--                </li>-->
+<!--                <li>-->
+<!--                    <span class="fa-li"><i class="fas fa-check"></i></span>-->
+<!--                    Gabriel Gama (Undergrad @ICOMP/UFAM | 2018).​Uma ferramenta para apoiar o uso do Scrum com equipes-->
+<!--                    remotas-->
+<!--                </li>-->
+<!--                <li>-->
+<!--                    <span class="fa-li"><i class="fas fa-check"></i></span>-->
+<!--                    Fabrício José da Silva Lima (Undergrad @ICOMP/UFAM | co-supervisor | 2017). Entendendo MSECO a-->
+<!--                    partir de Análise de Dados Técnicos do Stack Overflow-->
+<!--                </li>-->
+<!--                <li>-->
+<!--                    <span class="fa-li"><i class="fas fa-check"></i></span>-->
+<!--                    Schweitzer Wostewoysers Campelo (Undergrad @ICOMP/UFAM | co-supervisor | 2016). Analisando a Relação-->
+<!--                    entre Relatos de Falhas e Ratings em Comentários de Aplicações Móveis na Loja Google Play-->
+<!--                </li>-->
+<!--                <li>-->
+<!--                    <span class="fa-li"><i class="fas fa-check"></i></span>-->
+<!--                    Ludymila Lobo Aguiar Gomes (Undergrad @ICOMP/UFAM | co-supervisor | 2015). Identificando nichos em-->
+<!--                    Ecossistemas de Aplicativos Móveis-->
+<!--                </li>-->
+<!--                <li>-->
+<!--                    <span class="fa-li"><i class="fas fa-check"></i></span>-->
+<!--                    Caio Biase Grana (Undergrad @ICET/UFAM | co-supervisor | 2015). Realizando um estudo do método UX-->
+<!--                    Curve aplicado a Experiência do Desenvolvedor.-->
+<!--                </li>-->
+<!--            </ul>-->
+<!--        </div>-->
+<!--    </section>-->
+<!--    <hr class="m-0"/>-->
     <!-- Interests
     <section class="resume-section" id="interests">
         <div class="resume-section-content">
