--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
     <meta name="description" content=""/>
     <meta name="author" content=""/>
-    <title>Gabriel Menezes, Master Student - FACOM/UFMS</title>
+    <title>Gabriel Menezes, BSc - FACOM/UFMS</title>
     <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico"/>
     <!-- Font Awesome icons (free version)-->
     <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
@@ -20,7 +20,7 @@
 <!-- Navigation-->
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-        <span class="d-block d-lg-none">Gabriel Menezes, Master Degree Student</span>
+        <span class="d-block d-lg-none">Gabriel Menezes, BSc</span>
         <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2"
                                              src="assets/img/profile.jpeg" alt=""/></span>
     </a>
@@ -45,10 +45,10 @@
         <div class="resume-section-content">
             <h1 class="mb-0">
                 Gabriel Menezes
-                <span class="text-primary">, Master Student</span>
+                <span class="text-primary">, BSc</span>
             </h1>
             <div class="subheading mb-5">
-                Student, Federal University of Mato Grosso do Sul (UFMS), Faculty of Computing (FACOM)
+                Student, Faculty of Computing (FACOM) at Federal University of Mato Grosso do Sul (UFMS)
                 <a href="mailto:gabrielufmscc@gmail.com">gabrielufmscc@gmail.com</a>
             </div>
             <p class="lead mb-5"> Master Student in Computer Science by the Faculty of Computing at Federal University
@@ -64,6 +64,8 @@
             <div class="social-icons">
                 <a class="social-icon" href="https://www.linkedin.com/in/gabrielsantanamenezes/"><i
                         class="fab fa-linkedin-in"></i></a>
+                <a class="social-icon" href="mailto:gabrielufmscc@gmail.com"><i class="fab fa-google"></i></a>
+
                 <!--                        <a class="social-icon" href="https://www.twitter.com/awdren"><i class="fab fa-twitter"></i></a>-->
             </div>
         </div>
