Espacamento e novo icone

--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
                 University of
                 Mato Grosso do Sul (UFMS). The concerne of my research is about framework code samples, since their
                 creation and maintenance until hole ecossystem that they are inserted. </p>
-            <!--                    <a href="https://dblp.org/pers/f/Font=atilde=o:Awdren_de_Lima.html">DBLP | </a>-->
-            <a href="https://scholar.google.com.br/citations?user=gvIsuicAAAAJ&hl=en">Google Scholar </a>|
-            <!--                    <a href="https://www.researchgate.net/profile/Awdren_Fontao">Research Gate | </a>-->
-            <a href="http://lattes.cnpq.br/7656889487642468"> CV Lattes</a>
+            <div class="mb-1">
+                <a href="https://scholar.google.com.br/citations?user=gvIsuicAAAAJ&hl=en">Google Scholar </a>|
+                <a href="http://lattes.cnpq.br/7656889487642468"> CV Lattes</a>
+            </div>
             <div class="social-icons">
                 <a class="social-icon" href="https://www.linkedin.com/in/gabrielsantanamenezes/"><i
                         class="fab fa-linkedin-in"></i></a>
-                <a class="social-icon" href="mailto:gabrielufmscc@gmail.com"><i class="fab fa-google"></i></a>
+                <a class="social-icon" href="mailto:gabrielufmscc@gmail.com"><i class="fab envelope"></i></a>
 
                 <!--                        <a class="social-icon" href="https://www.twitter.com/awdren"><i class="fab fa-twitter"></i></a>-->
             </div>
