--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <div class="social-icons">
                 <a class="social-icon" href="https://www.linkedin.com/in/gabrielsantanamenezes/"><i
                         class="fab fa-linkedin-in"></i></a>
-                <a class="social-icon" href="mailto:gabrielufmscc@gmail.com"><i class="envelope"></i></a>
+                <a class="social-icon" href="mailto:gabrielufmscc@gmail.com"><i class="fab fa-envelope"></i></a>
 
                 <!--                        <a class="social-icon" href="https://www.twitter.com/awdren"><i class="fab fa-twitter"></i></a>-->
             </div>
