--- a/index.html
+++ b/index.html
@@ -32,8 +32,6 @@
             <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
             <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Publications</a></li>
             <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Research</a></li>
-            <!--            <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Students</a></li>-->
-            <!--<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Service</a></li>-->
             <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
         </ul>
     </div>
@@ -63,9 +61,7 @@
             <div class="social-icons">
                 <a class="social-icon" href="https://www.linkedin.com/in/gabrielsantanamenezes/"><i
                         class="fab fa-linkedin-in"></i></a>
-                <a class="social-icon" href="mailto:gabrielufmscc@gmail.com"><i class="fab fa-envelope"></i></a>
-
-                <!--                        <a class="social-icon" href="https://www.twitter.com/awdren"><i class="fab fa-twitter"></i></a>-->
+                <a class="social-icon" href="mailto:gabrielufmscc@gmail.com"><i class="fas fa-envelope-square"></i></a>
             </div>
         </div>
     </section>
