Alterando o icone novamente

--- a/index.html
+++ b/index.html
@@ -61,8 +61,7 @@
             <div class="social-icons">
                 <a class="social-icon" href="https://www.linkedin.com/in/gabrielsantanamenezes/"><i
                         class="fab fa-linkedin-in"></i></a>
-                <a class="social-icon" href="mailto:gabrielufmscc@gmail.com"><i class="far fa-envelope"></i></a>
-            </div>
+                <a class="social-icon" href="mailto:gabrielufmscc@gmail.com"><i class="fab fa-scholar"></i></a></div>
         </div>
     </section>
     <hr class="m-0"/>
