Adicionando os icones academicos

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet" type="text/css"/>
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="css/styles.css" rel="stylesheet"/>
+    <!--Academic icons-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons/css/academicons.min.css">
+
 </head>
 <body id="page-top">
 <!-- Navigation-->
@@ -54,15 +57,11 @@
                 University of
                 Mato Grosso do Sul (UFMS). The concerne of my research is about framework code samples, since their
                 creation and maintenance until hole ecossystem that they are inserted. </p>
-            <div class="mb-1">
-                <a href="https://scholar.google.com.br/citations?user=gvIsuicAAAAJ&hl=en">Google Scholar </a>|
-                <a href="http://lattes.cnpq.br/7656889487642468"> CV Lattes</a>
-            </div>
             <div class="social-icons">
-                <a class="social-icon" href="https://www.linkedin.com/in/gabrielsantanamenezes/"><i
-                        class="fab fa-linkedin-in"></i></a>
+                <a class="social-icon" href="https://www.linkedin.com/in/gabrielsantanamenezes/"><i class="fab fa-linkedin-in"></i></a>
                 <a class="social-icon" href="mailto:gabrielufmscc@gmail.com"><i class="far fa-envelope"></i></a>
-                <a class="social-icon" href="mailto:gabrielufmscc@gmail.com"><i class="fab fa-scholar"></i></a>
+                <a class="social-icon" href="https://scholar.google.com.br/citations?user=gvIsuicAAAAJ&hl=en"><i class="ai ai-google-scholar ai-3x"></i></a>
+                <a class="social-icon" href="http://lattes.cnpq.br/7656889487642468"><i class="ai ai-lattes ai-3x"></i></a>
             </div>
         </div>
     </section>
