Adicionando os icones academicos

--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
             <div class="social-icons">
                 <a class="social-icon" href="https://www.linkedin.com/in/gabrielsantanamenezes/"><i class="fab fa-linkedin-in"></i></a>
                 <a class="social-icon" href="mailto:gabrielufmscc@gmail.com"><i class="far fa-envelope"></i></a>
-                <a class="social-icon" href="https://scholar.google.com.br/citations?user=gvIsuicAAAAJ&hl=en"><i class="ai ai-google-scholar ai-3x"></i></a>
-                <a class="social-icon" href="http://lattes.cnpq.br/7656889487642468"><i class="ai ai-lattes ai-3x"></i></a>
+                <a href="https://scholar.google.com.br/citations?user=gvIsuicAAAAJ&hl=en"><i class="ai ai-google-scholar ai-3x"></i></a>
+                <a href="http://lattes.cnpq.br/7656889487642468"><i class="ai ai-lattes ai-3x"></i></a>
             </div>
         </div>
     </section>
