Adicionando os icones academicos, e removendo Research

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
     <meta name="description" content=""/>
     <meta name="author" content=""/>
-    <title>Gabriel Menezes, BSc - FACOM/UFMS</title>
+    <title>Gabriel Menezes - BSc - FACOM/UFMS</title>
     <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico"/>
     <!-- Font Awesome icons (free version)-->
     <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
@@ -23,7 +23,7 @@
 <!-- Navigation-->
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-        <span class="d-block d-lg-none">Gabriel Menezes, BSc</span>
+        <span class="d-block d-lg-none">Gabriel Menezes - BSc</span>
         <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2"
                                              src="assets/img/profile.jpeg" alt=""/></span>
     </a>
@@ -34,7 +34,7 @@
         <ul class="navbar-nav">
             <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
             <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Publications</a></li>
-            <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Research</a></li>
+<!--            <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Research</a></li>-->
             <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
         </ul>
     </div>
@@ -60,8 +60,8 @@
             <div class="social-icons">
                 <a class="social-icon" href="https://www.linkedin.com/in/gabrielsantanamenezes/"><i class="fab fa-linkedin-in"></i></a>
                 <a class="social-icon" href="mailto:gabrielufmscc@gmail.com"><i class="far fa-envelope"></i></a>
-                <a class="social-icon" href="https://scholar.google.com.br/citations?user=gvIsuicAAAAJ&hl=en"><i class="ai ai-google-scholar"></i></a>
-                <a class="social-icon" href="http://lattes.cnpq.br/7656889487642468"><i class="ai ai-lattes"></i></a>
+                <a class="social-icon" href="https://scholar.google.com.br/citations?user=gvIsuicAAAAJ&hl=en"><i class="ai ai-google-scholar academic-icon"></i></a>
+                <a class="social-icon" href="http://lattes.cnpq.br/7656889487642468"><i class="ai ai-lattes academic-icon"></i></a>
             </div>
         </div>
     </section>
@@ -108,55 +108,55 @@
     </section>
     <hr class="m-0"/>
     <!-- Education-->
-    <section class="resume-section" id="education">
-        <div class="resume-section-content">
-            <h2 class="mb-5">Research</h2>
-            I research the intersections of the Software Ecosystem (SECO) and Software Engineering (SE) areas, mainly on
-            topics related to Developer Relations (DevRel) and Developer eXperience (DX).
-            <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                <div class="flex-grow-1">
-                    <h3 class="mb-0">Current Research Topics</h3>
-                    <div class="subheading mb-3">Developer Relations (DevRel)</div>
-                    <p>There is a need for strategies to support the SECO capacity to increase or maintain its developer
-                        communities over time and survive inherent changes. In this scenario, the Developer Relations
-                        (DevRel) team emerge as a possible strategy. DevRel can be defined as: “it is about creating a
-                        vibrant ecosystem of third-party developers, by being the interface between those developers and
-                        the platform’s product, engineering, and design teams”. As part of SECO governance, planning and
-                        execution of DevRel activities is not trivial and focus on delimiting developer actions without
-                        excessively restricting the desired level of value creation. </p>
-                    <div class="subheading mb-3">Software Ecosystem</div>
-                    <p>The new dynamic of interactions between third-party users, developers, companies around a common
-                        platform has moved the organizations that maintain software platforms towards expanding their
-                        platforms, attracting developers and meeting the demands of users [1][2]. This scenario, which
-                        involves technical (i.e., the development process), social (i.e., interaction among users,
-                        companies and third-party/internal developers), and business (i.e., synergy surrounded by
-                        organizational intentions and developer expectations) dimensions, has been known as Software
-                        Ecosystem (SECO)</p>
-                    <div class="subheading mb-3">Software Engineering</div>
-                    <p>Experimental and Empirical Software Engineering | Mining Software Repositories | Software
-                        Testing, Verification and Validation | Education | </p>
-                </div>
-            </div>
-            <div class="d-flex flex-column flex-md-row justify-content-between">
-                <div class="flex-grow-1">
-                    <h3 class="mb-0">Partnerships</h3>
-                    <div class="subheading mb-3">I am conducting research in partnership with:</div>
-                    <p>Arilo Claudio Dias Neto (Professor @ICOMP/UFAM)</p>
-                    <p>Bernardo Estácio (Researcher @Takeaway.com)</p>
-                    <p>Bruno Bonifácio (Researcher @SIDIA)</p>
-                    <p>Bruno Cafeo (Professor @FACOM/UFMS)</p>
-                    <p>Bruno Gadelha (Professor @ICOMP/UFAM)</p>
-                    <p>Davi Viana(Professor @UFMA)</p>
-                    <p>Hudson Borges (Professor @FACOM/UFMS)</p>
-                    <p>Igor Wiese (Professor @UTFPR)</p>
-                    <p>Marcelo Quinta (Software Engineer @WhatsApp Inc.)</p>
-                    <p>Rodrigo Pereira dos Santos (Professor @UNIRIO</p>
-                    <p>Sérgio Cleger Tamayo (Researcher @SIDIA)</p>
-                </div>
-            </div>
-        </div>
-    </section>
-    <hr class="m-0"/>
+<!--    <section class="resume-section" id="education">-->
+<!--        <div class="resume-section-content">-->
+<!--            <h2 class="mb-5">Research</h2>-->
+<!--            I research the intersections of the Software Ecosystem (SECO) and Software Engineering (SE) areas, mainly on-->
+<!--            topics related to Developer Relations (DevRel) and Developer eXperience (DX).-->
+<!--            <div class="d-flex flex-column flex-md-row justify-content-between mb-5">-->
+<!--                <div class="flex-grow-1">-->
+<!--                    <h3 class="mb-0">Current Research Topics</h3>-->
+<!--                    <div class="subheading mb-3">Developer Relations (DevRel)</div>-->
+<!--                    <p>There is a need for strategies to support the SECO capacity to increase or maintain its developer-->
+<!--                        communities over time and survive inherent changes. In this scenario, the Developer Relations-->
+<!--                        (DevRel) team emerge as a possible strategy. DevRel can be defined as: “it is about creating a-->
+<!--                        vibrant ecosystem of third-party developers, by being the interface between those developers and-->
+<!--                        the platform’s product, engineering, and design teams”. As part of SECO governance, planning and-->
+<!--                        execution of DevRel activities is not trivial and focus on delimiting developer actions without-->
+<!--                        excessively restricting the desired level of value creation. </p>-->
+<!--                    <div class="subheading mb-3">Software Ecosystem</div>-->
+<!--                    <p>The new dynamic of interactions between third-party users, developers, companies around a common-->
+<!--                        platform has moved the organizations that maintain software platforms towards expanding their-->
+<!--                        platforms, attracting developers and meeting the demands of users [1][2]. This scenario, which-->
+<!--                        involves technical (i.e., the development process), social (i.e., interaction among users,-->
+<!--                        companies and third-party/internal developers), and business (i.e., synergy surrounded by-->
+<!--                        organizational intentions and developer expectations) dimensions, has been known as Software-->
+<!--                        Ecosystem (SECO)</p>-->
+<!--                    <div class="subheading mb-3">Software Engineering</div>-->
+<!--                    <p>Experimental and Empirical Software Engineering | Mining Software Repositories | Software-->
+<!--                        Testing, Verification and Validation | Education | </p>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            <div class="d-flex flex-column flex-md-row justify-content-between">-->
+<!--                <div class="flex-grow-1">-->
+<!--                    <h3 class="mb-0">Partnerships</h3>-->
+<!--                    <div class="subheading mb-3">I am conducting research in partnership with:</div>-->
+<!--                    <p>Arilo Claudio Dias Neto (Professor @ICOMP/UFAM)</p>-->
+<!--                    <p>Bernardo Estácio (Researcher @Takeaway.com)</p>-->
+<!--                    <p>Bruno Bonifácio (Researcher @SIDIA)</p>-->
+<!--                    <p>Bruno Cafeo (Professor @FACOM/UFMS)</p>-->
+<!--                    <p>Bruno Gadelha (Professor @ICOMP/UFAM)</p>-->
+<!--                    <p>Davi Viana(Professor @UFMA)</p>-->
+<!--                    <p>Hudson Borges (Professor @FACOM/UFMS)</p>-->
+<!--                    <p>Igor Wiese (Professor @UTFPR)</p>-->
+<!--                    <p>Marcelo Quinta (Software Engineer @WhatsApp Inc.)</p>-->
+<!--                    <p>Rodrigo Pereira dos Santos (Professor @UNIRIO</p>-->
+<!--                    <p>Sérgio Cleger Tamayo (Researcher @SIDIA)</p>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </section>-->
+<!--    <hr class="m-0"/>-->
     <!-- Skills-->
     <!--    <section class="resume-section" id="skills">-->
     <!--        <div class="resume-section-content">-->
