Fixing typo error

--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
             <ul class="fa-ul mb-0">
                 <li>
                     <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                    (2019) Top 3 Best Papper in ACM/IEEE International Symposium on Empirical Software Engineering and
+                    (2019) Top 3 Best Paper in ACM/IEEE International Symposium on Empirical Software Engineering and
                     Measurement (ESEM)
                 </li>
             </ul>
